scripts/utils/setup/k8s/cluster1/istio/routing-demo-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: routing-demo-gateway
  namespace: istio-enabled
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
